--- a/src/client/client-common/api_responses/CMakeLists.txt
+++ b/src/client/client-common/api_responses/CMakeLists.txt
@@ -1,4 +1,6 @@
 target_sources(client-common PRIVATE
+    amneziawgunblockparams.cpp
+    amneziawgunblockparams.h
     authtoken.cpp
     authtoken.h
     checkupdate.cpp
