--- a/src/client/frontend/gui/CMakeLists.txt
+++ b/src/client/frontend/gui/CMakeLists.txt
@@ -39,7 +39,9 @@ set(WS_TS_FILES
 
 # Using the -extensions flag to skip processing the .ui files in the test projects.  Otherwise, the
 # strings in said ui files will be added to the .ts output files.
-qt6_create_translation(WS_QM_FILES ${CMAKE_CURRENT_SOURCE_DIR}/../.. ${WS_TS_FILES} OPTIONS -extensions cpp,h -locations none)
+if (NOT DEFINE_QT_CREATOR_DEV_BUILD_MACRO)
+    qt6_create_translation(WS_QM_FILES ${CMAKE_CURRENT_SOURCE_DIR}/../.. ${WS_TS_FILES} OPTIONS -extensions cpp,h -locations none)
+endif()
 
 set(PROJECT_SOURCES
     # --- sources and headers ---
