--- a/src/client/frontend/gui/preferenceswindow/CMakeLists.txt
+++ b/src/client/frontend/gui/preferenceswindow/CMakeLists.txt
@@ -13,6 +13,8 @@ target_sources(gui PRIVATE
     advancedwindow/advancedwindowitem.h
     comboboxitem.cpp
     comboboxitem.h
+    connectionwindow/anticensorshipgroup.cpp
+    connectionwindow/anticensorshipgroup.h
     connectionwindow/connecteddnsgroup.cpp
     connectionwindow/connecteddnsgroup.h
     connectionwindow/connectionwindowitem.cpp
